<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav"
    app:startDestination="@id/titlekFragment">

    <fragment
        android:id="@+id/loseFragment"
        android:name="com.example.math.LoseFragment"
        android:label="@string/lose_nav_message"
        tools:layout="@layout/fragment_lose" >
        <action
            android:id="@+id/action_loseFragment_to_titlekFragment"
            app:destination="@id/titlekFragment" />
    </fragment>
    <fragment
        android:id="@+id/titlekFragment"
        android:name="com.example.math.TitleFragment"
        android:label="@string/title_nav_message"
        tools:layout="@layout/fragment_title" >
        <action
            android:id="@+id/action_titlekFragment_to_questionFragment"
            app:destination="@id/questionFragment" />
    </fragment>
    <fragment
        android:id="@+id/winFragment"
        android:name="com.example.math.WinFragment"
        android:label="@string/win_nav_message"
        tools:layout="@layout/fragment_win" >
        <action
            android:id="@+id/action_winFragment_to_titlekFragment"
            app:destination="@id/titlekFragment" />
    </fragment>
    <fragment
        android:id="@+id/questionFragment"
        android:name="com.example.math.QuestionFragment"
        android:label="@string/question_nav_message"
        tools:layout="@layout/fragment_question" >
        <action
            android:id="@+id/action_questionFragment_to_loseFragment"
            app:destination="@id/loseFragment" />
        <action
            android:id="@+id/action_questionFragment_to_winFragment"
            app:destination="@id/winFragment" />
    </fragment>
</navigation>